Fixed extra margin

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -102,7 +102,7 @@ p {
 
 .equation {
   display: grid;
-  grid-template-columns: 1fr 100px 1fr;
+  grid-template-columns: 1fr 80px 1fr;
   align-items: center;
 }
 
